# Customer-Satisfaction-and-Call-Drop-Rate-Analysis-for-Indian-Operators

./: README.md  pyproject.toml
Plots/: 01_Overall call drop percentage for each operator.html  02_Call drop % across years for each operator.html  Average customer ratings for call quality for different operators from 2021 till 2023.html  RJio Call drop % across the years for each month
data/: no_location_data.csv
notebooks/: 01_load_and_validate_raw_data.ipynb  02_explore_and_analyze.ipynb  Call drop % across years for each operator  RJio Call drop % across the years for each month
src/: utils.py
