[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["karthikeya pervela <69100096+pkarthikeya1@users.noreply.github.com>"]
readme = "README.md"

packages = [
            {include = "src"}
            ]


[tool.poetry.dependencies]
python = "^3.10"
geopy = "^2.4.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
plotly = "^5.22.0"
nbformat = "^5.10.4"
scipy = "^1.14.0"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
